check for whitespaces or null fixed new line moving a few pixels off

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -19,6 +19,7 @@ img{
 }
 
 p{
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
@@ -26,6 +27,7 @@ p{
     width: 100%;
 }
 #input-label{
+
     display: inline;
     /*background-color: blue;*/
 }
@@ -36,6 +38,7 @@ p{
     /*background-color: red;*/
 }
 #input{
+    padding: 0;
     background-color: transparent;
     border: none;
 }
